# spb

analytics/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
analytics/src/: main.py  model.py  pl_utils.py
analytics/tests/: preprocess.ipynb  test.ipynb  testtest.ipynb
analytics/tests/data/: data_for_spb_hakaton_entities1-Table 1.csv  sprints-Table 1.csv
back/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
back/src/: main.py  settings.py
back/src/core/: errors.py
back/src/core/auth/: __init__.py  auth.py
back/src/core/clickhouse/: __init__.py  base.py  models.py
back/src/core/db/: __init__.py  initdb.py  session.py
back/src/core/rabbitmq/: connection.py
back/src/crud/: auth.py  sprint.py  user.py
back/src/models/: __init__.py  base.py  sprint.py  user.py
back/src/routers/: __init__.py
back/src/routers/v1/: __init__.py  auth.py  sprint.py  upload.py  user.py
back/src/schemas/: auth.py  rabbit.py  sprint.py  user.py
front/: index.html  package.json  vite.config.ts
front/.github/workflows/: main.yml
front/src/app/lib/: ChakraProvider.tsx  ProtectedRoute.tsx  ReduxProvaider.tsx  RouterProvider.tsx  index.tsx
front/src/pages/: index.tsx
front/src/pages/compare/: index.tsx
front/src/pages/home/: index.tsx
front/src/pages/loading/: index.tsx
front/src/pages/login/: index.tsx
front/src/pages/registration/: index.tsx
front/src/pages/settings/: index.tsx
front/src/pages/upload/: index.tsx
front/src/shared/api/: axios.ts
front/src/shared/iconpack/: Edit.tsx  (+11 more)
front/src/widgets/: index.tsx
(+37 files in other folders)
