[project]
name = "torni-analytics"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "drPilman", email = "doktorpilman@gmail.com"},
]
dependencies = ["aio-pika>=9.4.3", "pydantic>=2.9.2", "pydantic-settings>=2.6.1", "polars>=1.13.1", "s3fs>=2024.10.0", "numpy>=2.1.3", "psycopg2-binary>=2.9.10", "sqlalchemy>=2.0.36"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
